# api/api.go
@@ -35,19 +35,21 @@ func Run(cfg *config.Config, h *handler.Handler) *gin.Engine {
 	user := r.Group("/user", middleware.JwtAuthMiddleware(cfg.AccessTokenSecret))
 	{
 		user.GET("/:id", h.GetUserByID)
+		user.GET("/", h.GetAllUsers)
 		user.PATCH("/", h.TransferMoney)
 		user.PUT("/transfer", h.TransferMoney)
 	}
 
 	role := r.Group("/role", middleware.JwtAuthMiddleware(cfg.AccessTokenSecret))
 	{
-		role.GET("/:id")
+		role.GET("/", h.GetAllRoles)
 	}
 
 	queue := r.Group("/queue", middleware.JwtAuthMiddleware(cfg.AccessTokenSecret))
 	{
 		queue.POST("/", h.CreateQueue)
 		queue.PATCH("/", h.MakePurchase)
+		queue.GET("/", h.GetAllQueues)
 	}
 
 	// swagger
