# api/handler/queue_handler.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/404th/clinic/model"
 	"github.com/404th/clinic/pkg/helper"
@@ -92,6 +93,69 @@ func (h *Handler) MakePurchase(c *gin.Context) {
 		helper.SendResponse(c, http.StatusInternalServerError, model.ErrorResponse{
 			Message: "error happened",
 			Data:    err,
+		})
+		return
+	}
+
+	helper.SendResponse(c, http.StatusOK, model.SuccessResponse{
+		Message: "OK",
+		Data:    resp,
+	})
+	return
+}
+
+// Get All Queues
+// @ID				get_all_queues
+// @Security		ApiKeyAuth
+// @Router			/queue [GET]
+// @Summary			get_all_queues
+// @Description		get_all_queues
+// @Tags			queue
+// @Accept			json
+// @Produce			json
+// @Param     	 	limit   query	    string	  										false	"limit"
+// @Param        	page    query     	string  										false  	"page"
+// @Success			200		{object}	model.SuccessResponse{data=model.GetAllQueuesResponse}	"body"
+// @Response		400		{object}	model.ErrorResponse{message=string}						"Invalid Argument"
+// @Failure			500		{object}	model.ErrorResponse{message=string}						"Server Error"
+func (h *Handler) GetAllQueues(c *gin.Context) {
+	var data model.GetAllQueuesRequest
+
+	limit_str := c.Query("limit")
+	if limit_str != "" {
+		limit, err := strconv.Atoi(limit_str)
+		if err != nil {
+			helper.SendResponse(c, http.StatusBadRequest, model.ErrorResponse{
+				Message: "limit is not valid",
+				Data:    err,
+			})
+			return
+		}
+		data.Limit = int32(limit)
+	} else {
+		data.Limit = int32(10)
+	}
+
+	page_str := c.Query("page")
+	if page_str != "" {
+		page, err := strconv.Atoi(page_str)
+		if err != nil {
+			helper.SendResponse(c, http.StatusBadRequest, model.ErrorResponse{
+				Message: "page is not valid",
+				Data:    err,
+			})
+			return
+		}
+		data.Page = int32(page)
+	} else {
+		data.Page = int32(1)
+	}
+
+	resp, err := h.service.QueueService().GetAllQueues(c.Request.Context(), &data)
+	if err != nil {
+		helper.SendResponse(c, http.StatusInternalServerError, model.ErrorResponse{
+			Message: "error happened",
+			Data:    err.Error(),
 		})
 		return
 	}
